src/component/header/header.css
.header {
  background: #FFFFFF;
  top:0;
  height:10vh;
  width: 100vw;
  border-top: 5px solid #FF7B11;
  box-shadow: 0px 1px 1px gray;
  position: absolute;
}

.left {
  float: left;
  padding-left: 5px;
  text-align: left;
}

.right {
  right: 0;
  text-align: right;
}

.logo-sm {
  height: 6vh;
}

.glyphicon-custom{
  padding-top:20px;
  font-size: 20px;
  color: #CCCCCC;
}

